--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -26,7 +26,7 @@ title: About Us
           <img src="{{site.baseurl}}/img/bio/drchang.png" alt="Dr Chang's profile picture">
         </figure>
         <p class="mobile-show">Dr. Quyen Chang is a dedicated family dentist who is committed to establishing and maintaining the health of your teeth and mouth.  She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area.  She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society.</p>
-        <p>Dr. Chang received her undergraduate degree at Meredith College in Raleigh, North Carolina, and graduated from the University of North Carolina School of Dentistry in 1987.  Not longer after she graduated, she opened her own practice in Raleigh, where she has been practicing for over 25 years.  Over the years, Dr. Chang has developed a countless number of relationships through providing dental care and restoring oral health in her community.  She has cherished these opportunities and continues to value getting to know her patients on both the dental and non-dental front.  Her ability to connect with patients is partly attributed to her fluency in four different languages: English, Mandarin, Cantonese, and Vietnamese.</p>
+        <p>Dr. Chang received her undergraduate degree at Meredith College in Raleigh, North Carolina, and graduated from the University of North Carolina School of Dentistry.  Not longer after she graduated, she opened her own practice in Raleigh, where she has been practicing for over 30 years.  Over the years, Dr. Chang has developed a countless number of relationships through providing dental care and restoring oral health in her community.  She has cherished these opportunities and continues to value getting to know her patients on both the dental and non-dental front.  Her ability to connect with patients is partly attributed to her fluency in four different languages: English, Mandarin, Cantonese, and Vietnamese.</p>
         <p>Dr. Chang is happily married to her husband, David, and together they have two sons, Timothy and Joshua.  Outside of her dental practice, Dr. Chang enjoys traveling, gardening, swimming, and Sudoku puzzles.  She is also an active member at her church, Raleigh Chinese Christian Church, where she has been attending for over 25 years.</p>
       </section>
 
@@ -36,7 +36,7 @@ title: About Us
           <img src="{{site.baseurl}}/img/bio/timchang.png" alt="Dr Timothy Chang's profile picture">
         </figure>
         <p>Dr. Timothy Chang is a caring family dentist who understands the value of your oral health in relation to your overall health. He has a desire to build relationships with his patients so that he can better treat your dental needs and provide outstanding care. He is a proud member of the Raleigh-Wake County Dental Society.</p>
-        <p class="mobile-show">Dr. Timothy Chang is the eldest son of Dr. Quyen Chang. He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill in 2008. Following his mother’s footsteps, he graduated from the University of North Carolina at Chapel Hill School of Dentistry with his Doctor of Dental Surgery degree in 2012. That summer, he and his wife, Tina, moved to Seattle, Washington for Tina’s residency training in family medicine at Group Health Cooperative. During his time in Seattle, Dr. Chang worked as an associate family dentist with Graham T. Egger, DDS, and gained valuable experience there. In 2015, Tina graduated from her residency program, had their first child, Adeline, and decided to move back to North Carolina to be closer to their families.</p>
+        <p class="mobile-show">Dr. Timothy Chang is the eldest son of Dr. Quyen Chang. He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill. Following his mother’s footsteps, he graduated from the University of North Carolina at Chapel Hill School of Dentistry with his Doctor of Dental Surgery degree. He and his wife, Tina, then moved to Seattle, Washington for Tina’s residency training in family medicine. During his time in Seattle, Dr. Chang worked as an associate family dentist with Graham T. Egger, DDS, and gained valuable experience there. Following Tina's graduation from her residency program, they decided to move back to North Carolina to be closer to their families. They have two daughters, Adeline and Eleanor.</p>
         <p>In his free time, Dr. Chang enjoys spending time with his family, running, hiking, playing basketball, reading, and eating. He is an active member of Waypoint Church, volunteers regularly at the Samaritan's Health Center Dental Clinic in Durham, and is a big fan of UNC men’s basketball and the Carolina Panthers.</p>
       </section>
 
@@ -48,7 +48,7 @@ title: About Us
           </figure>
           <h3 class="name">Rosa</h3>
           <h4 class="job">Assistant</h4>
-          <p class="bio">Rosa has been with our team since 2005, and continues to build meaningful relationships with the patients she works with daily.  She enjoys reading as well as spending time with her family, which takes up most of her free time!</p>
+          <p class="bio">Rosa has been with our team since 2005, and continues to build meaningful relationships with the patients she works with daily.  She enjoys reading as well as spending time with her family, which takes up most of her free time! She is fluent in Spanish.</p>
         </section>
         <section class="teammate">
           <figure>
@@ -62,16 +62,16 @@ title: About Us
           <figure>
             <img src="{{site.baseurl}}/img/bio/placeholder.png" alt="Placeholder profile picture">
           </figure>
-          <h3 class="name">Lindsay</h3>
+          <h3 class="name">Patricia</h3>
           <h4 class="job">Office Administrator</h4>
-          <p class="bio">Lindsay joined our team May 2017 and looks forward to getting to know our patients better!</p>
+          <p class="bio">Patricia joined our team June 2018 and looks forward to getting to know our patients better! She is fluent in Cantonese and Mandarin.</p>
         </section>
       </section>
 
       <section class="history">
         <h1 id="Our-History">History of the Practice</h1>
         <p>In 1988, Dr. Quyen Chang opened the doors to her practice to the Raleigh community.  As one of the first dentists of Asian descent practicing in the area at the time, she steadily grew a loyal patient base simply by word-of-mouth and internal referrals.  Patients always complimented her incredible kindness and gentleness in the care she provided, and the relationships that were built in the practice continued to flourish.</p>
-        <p>After twenty-five years, the Dr. Chang continues to provide quality dental care for her patients, and relies heavily on word-of-mouth referrals from her trusted patients to continue serving the Raleigh community.  She feels blessed for each and every day that she is able to help her patients achieve and maintain a healthy smile, all the while building meaningful and lasting relationships.</p>
+        <p>After thirty years, the Dr. Chang continues to provide quality dental care for her patients, and relies heavily on word-of-mouth referrals from her trusted patients to continue serving the Raleigh community.  She feels blessed for each and every day that she is able to help her patients achieve and maintain a healthy smile, all the while building meaningful and lasting relationships.</p>
       </section>
 
       <section class="mission">
