--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -56,7 +56,7 @@ title: About Us
           </figure>
           <h3 class="name">Barbara</h3>
           <h4 class="job">Hygienist</h4>
-          <p class="bio">Barbara has been with our team since 1994, and brings a great amount of experience and expertise to our practice.  Her hobbies include doing crossword puzzles, taking care of her dog and cat, and playing with her new grandchild whenever she has a chance.</p>
+          <p class="bio">Barbara has been with our team since 1994, and brings a great amount of experience and expertise to our practice.  Her hobbies include doing crossword puzzles, taking care of her dog and cat, and playing with her grandchild whenever she has a chance.</p>
         </section>
         <section class="teammate">
           <figure>
