fix: update aboutus bios

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -52,11 +52,13 @@ title: About Us
         {% include aboutus/teammate.html
             name="Chi"
             job="Hygienist"
+            bio="Chi began as a patient at our office, and has now joined our team as a hygienist. She enjoys educating people on taking care of their oral health and loves seeing great smiles. She enjoys spending time with her two little girls, cooking, and traveling. She is fluent in Vietnamese."
             img="chi.png" %}
 
         {% include aboutus/teammate.html
             name="Adriana"
             job="Office Administrator"
+            bio="Adriana joined our team in 2020, and looks forward to getting to know our patients better! She is fluent in Spanish."
             img="adriana.png" %}
 
       </section>
