fix: abstract phone # into config

--- a/patientinfo/index.html
+++ b/patientinfo/index.html
@@ -46,6 +46,6 @@ category: patientinfo
         <li>HealthSmart</li>
       </ul>
       <p>We gladly accept and will file claims for other dental insurance plans (such as, but not limited to, Ameritas, Metlife, and United Concordia).</p>
-      <p>If you have any other questions regarding finances or insurance, please do not hesitate to call our office at (919) 783-6551.</p>
+      <p>If you have any other questions regarding finances or insurance, please do not hesitate to call our office at {{site.phone}}.</p>
   </section>
 </section>
