--- a/request-appointment/index.html
+++ b/request-appointment/index.html
@@ -7,7 +7,7 @@ category: requestappt
   <section class="page-content">
       <h1>Request Appointment</h1>
       <p>Please note this form is only for requesting an appointment.</p>
-      <p>If you need to cancel or reschedule an existing appointment, or if this is an emergency, please contact our office directly by calling (919) 783-6551.</p>
+      <p>If you need to cancel or reschedule an existing appointment, or if this is an emergency, please contact our office directly by calling {{site.phone}}.</p>
 
       <div id="apptForm-success-msg" class="visuallyhidden">
           <p>Thank you!</p>
