--- a/contactus/index.html
+++ b/contactus/index.html
@@ -7,7 +7,7 @@ category: contactus
   <nav class="page-nav">
       <h1>Contact Us</h1>
       <section>
-        <p>Please contact us with any questions you many have, or if you are interested in scheduling an appointment</p>
+        <p>Please contact us with any questions you may have, or if you are interested in scheduling an appointment</p>
         {% include contactinfo.html %}
         {% include weeklyschedule.html %}
       </section>
