--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
                 <img src="img/reasons-to-believe/smile.png" alt="smile">
               </span>
               <h2 class="tag">Service to make you smile</h2>
-              <span class="reason">Our office strives to provide an experience that is comfortable, warm, and relaxed for you and your family. We also are committed to excellent service for our patients with open and clear communication</span>
+              <span class="reason">Our office strives to provide an experience that is comfortable, warm, and relaxed for you and your family. We also are committed to excellent service for our patients with open and clear communication.</span>
           </li>
       </ul>
   </section>
