update: disable Veneers content

--- a/dentalcare/index.html
+++ b/dentalcare/index.html
@@ -26,7 +26,9 @@ category: dentalcare
             <li><a href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
             <li><a href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
             <li><a href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
+            {% comment %}
             <li><a href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
+            {% endcomment %}
         </ul>
     </section>
 </section>
