update: office admin name

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -56,9 +56,9 @@ title: About Us
             img="chi.png" %}
 
         {% include aboutus/teammate.html
-            name="Uyen"
+            name="Chau"
             job="Office Administrator"
-            bio="Uyen joined our team in 2023 due to her interest in the dental field. She has enjoyed getting to know our patients and helping serve them. She is fluent in Vietnamese."
+            bio="Chau joined our team in 2023 due to her interest in the dental field. She has enjoyed getting to know our patients and helping serve them. She is fluent in Vietnamese."
             img="profile-placeholder.svg" %}
 
       </section>
