Added uyen.png image

--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -59,7 +59,7 @@ title: About Us
             name="Uyen"
             job="Office Administrator"
             bio="Uyen joined our team in 2023 due to her interest in the dental field. She has enjoyed getting to know our patients and helping serve them. She is fluent in Vietnamese."
-            img="profile-placeholder.svg" %}
+            img="uyen.png" %}
 
       </section>
 
