--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -16,10 +16,12 @@ title: About Us
       </section>
   </nav>
   <section class="page-content">
+    <!--    Removed About Us Banner Photo
       <figure>
           <img src="{{site.baseurl}}/img/banner/about_banner5.png" alt="about us banner">
       </figure>
-
+    -->
+    
       <section class="drchang-bio">
         <h1 id="Meet-Dr-Chang">Meet Dr. Quyen Chang</h1>
         <figure class="drchang-profile-pic">
