--- a/patientinfo/index.html
+++ b/patientinfo/index.html
@@ -19,33 +19,32 @@ category: patientinfo
 
       <h1 id="Patient-Forms">Patient Forms</h1>
       <ul>
-        <li><a target="_blank" href="https://patientviewer.com/WebFormsGWT/GWT/WebForms/WebForms.html?DentalOfficeID=29439&WebSheetDefID=18531">Registration Form</a></li>
-        <li><a target="_blank" href="https://patientviewer.com/WebFormsGWT/GWT/WebForms/WebForms.html?DentalOfficeID=29439&WebSheetDefID=18539">Medical History Form</a></li>
+        <li><a target="_blank" href="https://patientviewer.com/WebFormsGWT/GWT/WebForms/WebForms.html?DOID=126853&RKID=44544&WSDID=176768">Registration Form</a></li>
+        <li><a target="_blank" href="https://patientviewer.com/WebFormsGWT/GWT/WebForms/WebForms.html?DOID=126853&RKID=44544&WSDID=176771">Medical History Form</a></li>
       </ul>
 
       <h1 id="Your-Appointment">Your Appointment</h1>
-      <p>At your first appointment, you can expect Dr. Chang to provide a complete examination that includes a diagnosis of any dental decay (cavities) and periodontal disease (gum disease) present, and a screening for oral cancer.  Also included is a review of your medical and dental history as well as radiographs (x-rays) to help us determine the best plan of action for achieving and maintaining your dental health.  If you have a primary concern or issue you would like Dr. Chang to take special note of, please inform her of this so she can best address your concerns in the context of your entire dental health.</p>
-      <p>Following the examination, Dr. Chang and our team will go over her findings and inform you of the treatment she recommends.  If you have dental insurance, we will inform you of your available benefits for dental treatment and an estimate of your out-of-pocket portion at your request.  With this information, you can make a well-informed decision about your dental care.  We are here to help you achieve and maintain optimal dental health, so do not hesitate to ask us any questions you may have.  We will do our best to try and answer them.</p>
+      <p>At your first appointment, you can expect Dr. Chang to provide a complete examination that includes a diagnosis of any dental decay (cavities) and periodontal disease (gum disease) present, and a screening for oral cancer. Also included is a review of your medical and dental history as well as radiographs (x-rays) to help us determine the best plan of action for achieving and maintaining your dental health. If you have a primary concern or issue you would like Dr. Chang to take special note of, please inform him of this so he can best address your concerns in the context of your entire dental health.</p>
+      <p>Following the examination, Dr. Chang and our team will go over his findings and inform you of the treatment he recommends. If you have dental insurance, we will inform you of your available benefits for dental treatment and an estimate of your out-of-pocket portion at your request. With this information, you can make a well-informed decision about your dental care. We are here to help you achieve and maintain optimal dental health, so do not hesitate to ask us any questions you may have. We will do our best to try and answer them.</p>
 
       <h1 id="Financial-Arrangements">Financial Arrangements / Insurance</h1>
-      <p>Dr. Chang and our team are committed to providing you with quality dental care at an reasonable price.  We know the importance of being informed when making large purchases, and therefore we are available to answer any financial questions you may have regarding your dental treatment.</p>
+      <p>Dr. Chang and our team are committed to providing you with quality dental care at an reasonable price. We know the importance of being informed when making large purchases, and therefore we are available to answer any financial questions you may have regarding your dental treatment.</p>
       <p>Our office gladly accepts these forms of payment:</p>
       <ul>
         <li>Cash</li>
         <li>Check</li>
         <li>Credit and Debit Cards (Visa, MasterCard, and Discover)</li>
       </ul>
-      <p>Our office also accepts most dental insurances, and will file the insurance claims for you.  Deductibles and co-payments, or the portion of treatment that the insurance will not cover, will be due at the time dental services are rendered.</p>
-      <p>Please provide us with the most recent and accurate insurance information so that we can process claims quickly and properly for you.  If any changes happen to your dental insurance, please inform us of this as soon as possible.</p>
+      <p>Our office also accepts most dental insurances, and will file the insurance claims for you. Deductibles and co-payments, or the portion of treatment that the insurance will not cover, will be due at the time dental services are rendered.</p>
+      <p>Please provide us with the most recent and accurate insurance information so that we can process claims quickly and properly for you. If any changes happen to your dental insurance, please inform us of this as soon as possible.</p>
       <p>We are in network for the following dental insurance plans:</p>
       <ul>
         <li>Aetna</li>
         <li>Blue Cross Blue Shield (Dental Blue)</li>
         <li>Cigna</li>
         <li>Delta Dental</li>
-        <li>HealthSmart</li>
       </ul>
-      <p>We gladly accept and will file claims for other dental insurance plans (such as, but not limited to, Ameritas, Metlife, and United Concordia).</p>
+      <p>We gladly accept and will file claims for other dental insurance plans (such as, but not limited to, Ameritas, Humana, Metlife, and United Healthcare).</p>
       <p>If you have any other questions regarding finances or insurance, please do not hesitate to call our office at {{site.phone}}.</p>
   </section>
 </section>
