--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -8,8 +8,8 @@ title: About Us
   <nav class="page-nav">
       <h1>About Us</h1>
       <section>
-        <h2><a href="#Meet-Dr-Chang">Meet Dr. Quyen Chang</a></h2>
         <h2><a href="#Meet-Dr-TimChang">Meet Dr. Timothy Chang</a></h2>
+        <h2><a href="#Meet-Dr-Chang">Meet Dr. Quyen Chang</a></h2>
         <h2><a href="#Meet-the-Team">Meet the Team</a></h2>
         <h2><a href="#Our-History">History of the Practice</a></h2>
         <h2><a href="#Our-Mission">Our Mission</a></h2>
@@ -21,26 +21,27 @@ title: About Us
           <img src="{{site.baseurl}}/img/banner/about_banner5.png" alt="about us banner">
       </figure>
     -->
-    
-      <section class="drchang-bio">
-        <h1 id="Meet-Dr-Chang">Meet Dr. Quyen Chang</h1>
-        <figure class="drchang-profile-pic">
-          <img src="{{site.baseurl}}/img/bio/drchang.png" alt="Dr Chang's profile picture">
-        </figure>
-        <p class="mobile-show">Dr. Quyen Chang is a dedicated family dentist who has practiced for over 35 years, and is committed to establishing and maintaining the health of her patients' teeth and mouth. She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area. She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society. She is fluent in Mandarin Chinese, Cantonese, and Vietnamese.</p>
-        <p>Dr. Chang received her undergraduate degree at Meredith College in Raleigh, North Carolina, and graduated from the University of North Carolina School of Dentistry. Not longer after she graduated, she opened her own practice in Raleigh, where she has been practicing since. Over the years, Dr. Chang has developed a countless number of relationships through providing dental care and restoring oral health in her community. She has cherished these opportunities and continues to value getting to know her patients on both the dental and non-dental front.</p>
-        <p>Dr. Chang is happily married to her husband, David, and together they have two sons, Timothy and Joshua. Outside of her dental practice, Dr. Chang enjoys traveling, gardening, swimming, and Sudoku puzzles. She is also an active member at her church, Raleigh Chinese Christian Church, where she has been attending for over 25 years.</p>
-      </section>
-
       <section class="drchang-bio">
         <h1 id="Meet-Dr-TimChang">Meet Dr. Timothy Chang</h1>
         <figure class="drchang-profile-pic">
           <img src="{{site.baseurl}}/img/bio/timchang.png" alt="Dr Timothy Chang's profile picture">
         </figure>
-        <p class="mobile-show">Dr. Timothy Chang is a caring family dentist who has been practicing dentistry for over a decade, and who understands the value of his patients' oral health in relation to their overall health. He has a desire to build relationships with his patients so that he can better treat their dental needs and provide outstanding care. He is a proud member of the Raleigh-Wake County Dental Society, North Carolina Dental Society, and American Dental Association. He is fluent in Mandarin Chinese.</p>
-        <p>Dr. Timothy Chang is the eldest son of Dr. Quyen Chang. He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill. Following his mother’s footsteps, he graduated from the University of North Carolina at Chapel Hill School of Dentistry with his Doctor of Dental Surgery degree. He and his wife, Tina, then moved to Seattle, Washington for Tina’s residency training in family medicine. During his time in Seattle, Dr. Chang worked as an associate family dentist with Graham T. Egger, DDS, and gained valuable experience there. Following Tina's graduation from her residency program, they decided to move back to North Carolina to be closer to their families. They have two daughters, Addie and Ella.</p>
+        <p class="mobile-show">Dr. Timothy Chang is a caring family dentist who has been practicing dentistry for over a decade, and who understands the value of his patients' oral health in relation to their overall health. He has a desire to build relationships with his patients so that he can better treat their dental needs and provide outstanding care. He is a proud member of the Christian Medical and Dental Association, Raleigh-Wake County Dental Society, North Carolina Dental Society, and American Dental Association. He is fluent in Mandarin Chinese.</p>
+        <p>Dr. Timothy Chang is the eldest son of Dr. Quyen Chang. He was born and raised in the Raleigh area, and received his bachelor’s degrees with highest distinctions in Biology and Mathematics at the University of North Carolina at Chapel Hill. Following his mother’s footsteps, he graduated from the Adams School of Dentistry at UNC-Chapel Hill with his Doctor of Dental Surgery degree. He and his wife, Tina, then moved to Seattle, Washington for her residency training in family medicine. During his time in Seattle, Dr. Chang worked with Dr. Graham T. Egger, and gained valuable experience there. Following his wife's graduation from her residency program, they decided to move back to North Carolina to be closer to their families. They have two daughters, Addie and Ella.</p>
         <p>In his free time, Dr. Chang enjoys spending time with his family, running, hiking, playing basketball, reading, eating, and supporting the Carolina Panthers and UNC men's basketball. He is an active member of Trinity Park Church.</p>
       </section>
+     
+
+      <section class="drchang-bio">
+        <h1 id="Meet-Dr-Chang">Meet Dr. Quyen Chang</h1>
+        <figure class="drchang-profile-pic">
+          <img src="{{site.baseurl}}/img/bio/drchang.png" alt="Dr Chang's profile picture">
+        </figure>
+        <p class="mobile-show">Dr. Quyen Chang is a dedicated family dentist who has practiced dentistry for over 35 years, and is committed to establishing and maintaining the health of her patients' teeth and mouth. She displays an unparalleled level of gentleness and care for all of her patients, which she couples with her expertise and skill to provide excellent dental care in the Triangle area. She is a proud member of the American Association of Women Dentists and the Raleigh-Wake County Dental Society. She is fluent in Mandarin Chinese, Cantonese, and Vietnamese.</p>
+        <p>Dr. Chang received her undergraduate degree at Meredith College in Raleigh, North Carolina, and graduated from the Adams School of Dentistry at UNC-Chapel Hill. Not longer after she graduated, she opened this practice in Raleigh, where she has been practicing since. Over the years, Dr. Chang has developed a countless number of relationships through providing dental care and restoring oral health in her community. She has cherished these opportunities and continues to value getting to know her patients on both the dental and non-dental front.</p>
+        <p>Dr. Chang is happily married to her husband, David, and together they have two sons, Timothy and Joshua. Outside of her dental practice, Dr. Chang enjoys traveling, gardening, exercising, baking, and Sudoku puzzles.</p>
+      </section>
+
 
       <section class="team">
         <h1 id="Meet-the-Team">Meet the Team</h1>
@@ -68,13 +69,15 @@ title: About Us
       <section class="history">
         <h1 id="Our-History">History of the Practice</h1>
         <p>In 1988, Dr. Quyen Chang opened the doors to her practice to the Raleigh community. As one of the first dentists of Asian descent practicing in the area at the time, she steadily grew a loyal patient base simply by word-of-mouth and internal referrals. Patients always complimented her incredible kindness and gentleness in the care she provided, and the relationships that were built in the practice continued to flourish.</p>
-        <p>After 35 years, Dr. Chang continues to provide quality dental care for her patients, and relies heavily on word-of-mouth referrals from her trusted patients to continue serving the Raleigh community. She feels blessed for each and every day that she is able to help her patients achieve and maintain a healthy smile, all the while building meaningful and lasting relationships.</p>
+        <p>Her son, Dr. Timothy Chang, began practicing with her in 2015. He brought his experience from dental school and working in the Seattle area and combined it with the experience from his mother's 25 years of practicing. Dr. Quyen Chang's patients were glad that her son could continue to provide quality dental care for them, and the transfer of trust was a smooth and natural one.</p>
+        <p>With a combined 45 years of practicing dentistry, Drs. Quyen and Timothy Chang continue to provide quality, honest, and gentle dental care for their patients, and rely heavily on word-of-mouth referrals from their trusted patients to continue serving the Raleigh community. They feel blessed for each and every day that they are able to help their patients achieve and maintain a healthy smile, all the while building meaningful and lasting relationships. Dr. Quyen Chang also feels blessed that her son can continue the legacy that she began.</p>
+
       </section>
 
       <section class="mission">
         <h1 id="Our-Mission">Our Mission</h1>
-        <p>Our dental team is dedicated to provide the best possible patient care for our patients.  We value the relationships that are formed and developed through the dental care we provide, and are committed to partner with our patients to achieve and maintain the best possible oral, and overall, health for them.  We know all of our patients are unique individuals who require personalized quality care, and thus make every effort to provide comfortable treatment, maintain clear communication, and offer excellent customer service to everyone who walks through our doors.  We are a business that is founded foremost on integrity, and recognize that we have been blessed so that we can be a blessing to our patients.</p>
-        <p>Within our team, we practice trust, honesty, and open communication with each other in order to function as a cohesive team.  We value the relationships we have with our families, our other team members, and our patients.  We are committed to growing as a team, both relationally and professionally.  We understand that it requires a well-functioning team, both in and outside the office, to provide the best care and service for our patients.</p>
+        <p>Our dental team is dedicated to provide the best possible patient care for our patients. We value the relationships that are formed and developed through the dental care we provide, and are committed to partner with our patients to achieve and maintain the best possible oral, and overall, health for them. We know all of our patients are unique individuals who require personalized quality care, and thus make every effort to provide comfortable treatment, maintain clear communication, and offer excellent customer service to everyone who walks through our doors. We are a business that is founded foremost on integrity, and recognize that we have been blessed so that we can be a blessing to our patients.</p>
+        <p>Within our team, we practice trust, honesty, and open communication with each other in order to function as a cohesive team. We value the relationships we have with our families, our other team members, and our patients. We are committed to growing as a team, both relationally and professionally. We understand that it requires a well-functioning team, both in and outside the office, to provide the best care and service for our patients.</p>
       </section>
   </section>
 </section>
