--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
           <img src="img/banner/home_banner.png" alt="home banner">
           <figcaption>
               <p>Welcome to the office of</p>
-              <p class="dds">Quyen D. Chang, DDS,</p>
+              <p class="dds">Timothy C. Chang, DDS,</p>
               <p>a family dentist in Raleigh, North Carolina</p>
           </figcaption>
       </figure>
@@ -20,14 +20,14 @@ layout: default
                 <img src="img/reasons-to-believe/helpinghands.png" alt="helping hands">
               </span>
               <h2 class="tag">Your health in good hands</h2>
-              <span class="reason">Dr. Chang is dedicated to utilizing her knowledge, skill, and gentle care in partnering with her patients to help them achieve a healthy and beautiful smile.</span>
+              <span class="reason">Dr. Chang is dedicated to utilizing his knowledge, skill, and gentle care in partnering with his patients to help them achieve a healthy and beautiful smile.</span>
           </li>
           <li>
               <span class="symbol">
                 <img src="img/reasons-to-believe/trust.png" alt="trust">
               </span>
               <h2 class="tag">Experience you can trust</h2>
-              <span class="reason">Dr. Chang places the utmost value on the integrity of her dental care and always has her patients' best interests at heart. As a result, she has been blessed with over 25 years of experience caring for patients that trust her.</span>
+              <span class="reason">Dr. Chang places the utmost value on the integrity of his dental care and always has his patients' best interests at heart. Along with his mother, Dr. Quyen Chang, they have been blessed with over 35 years of experience caring for patients that trust them.</span>
           </li>
           <li>
               <span class="symbol">
